2016-04-27  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el (frame-title-format): Modify frame-title-format.

2016-02-06  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-cedet.el ("pulse"): Speed up pulse.

2016-01-29  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Add minor mode for helm-mode.

	* init/modules/init-calendar.el: Update appt setting for diary.

2016-01-28  Liu Xin  <meteor1113@qq.com>

	* init.el: Speed up.

2016-01-27  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el: Disable global-cwarn-mode.
	Don't load generic-x at start up.

2016-01-26  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Update major mode menu for haskell.

	* init/progmodes/init-haskell.el: Add package ghc and company-ghc.

	* init/modules/init-fci.el: Config fill-column-indicator.

	* init/progmodes/init-prog.el: Only enable fci-mode in window-system.

	* init/modules/init-flycheck.el: Disable global-flycheck-mode default.

	* init/init-package.el (fci-dash-pattern): Config fci-mode and whitespace.

2016-01-25  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el: Disable symon-mode default.

	* init/modules/init-toolbar.el: Update toolbar menu.

2016-01-24  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el: Add package minimap.
	(after-init-hook): Add package symon.
	(after-init-hook): Add package aggressive-indent.

	* init/progmodes/init-gdb.el: Split init-cc to init-cc and init-gdb.

	* init/init-package.el (after-init-hook): Add pacage smex.

2016-01-23  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el: Add package anzu.

2016-01-20  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el: Keep desktop-load-locked-desktop to 'ask.

	* init.el: Don't server-start automatic.

2016-01-19  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-cedet.el (featurep): Fix called-interactively-p.

	* init.el: Add 'noerror for require.

	* init/modules/init-highlight.el (after-init-hook): Setting for volatile-highlights.
