@@ -54,10 +54,10 @@
  '(anzu-search-threshold 1000)
  '(anzu-replace-threshold 50)
  '(anzu-replace-to-string-separator " => "))
-;; (add-hook 'after-init-hook
-;;           '(lambda ()
-;;              (ignore-errors (global-anzu-mode +1))))
-(run-with-idle-timer 3 nil #'global-anzu-mode +1)
+(add-hook 'after-init-hook
+          '(lambda ()
+             (ignore-errors (global-anzu-mode +1))))
+;; (run-with-idle-timer 3 nil #'global-anzu-mode +1)
 (eval-after-load "anzu"
   '(progn
      (global-set-key (kbd "M-%") 'anzu-query-replace)
@@ -69,10 +69,10 @@
 
 ;; drag-stuff
 ;; (autoload 'drag-stuff-global-mode "drag-stuff" "Toggle Drag-Stuff mode." t)
-;; (add-hook 'after-init-hook
-;;           '(lambda ()
-;;              (ignore-errors (drag-stuff-global-mode t))))
-(run-with-idle-timer 3 nil #'drag-stuff-global-mode t)
+(add-hook 'after-init-hook
+          '(lambda ()
+             (ignore-errors (drag-stuff-global-mode t))))
+;; (run-with-idle-timer 3 nil #'drag-stuff-global-mode t)
 
 ;; mark-multiple
 ;; (require 'inline-string-rectangle)
@@ -108,10 +108,10 @@
 ;; projectile
 ;; (autoload 'projectile-mode "projectile" nil t)
 ;; (autoload 'projectile-global-mode "projectile" nil t)
-;; (add-hook 'after-init-hook
-;;           '(lambda ()
-;;              (ignore-errors (projectile-global-mode 1))))
-(run-with-idle-timer 3 nil #'projectile-global-mode 1)
+(add-hook 'after-init-hook
+          '(lambda ()
+             (ignore-errors (projectile-global-mode 1))))
+;; (run-with-idle-timer 3 nil #'projectile-global-mode 1)
 
 ;; rainbow-mode
 ;; (autoload 'rainbow-mode "rainbow-mode" nil t)
@@ -120,13 +120,14 @@
 (global-set-key [C-f7] 'smart-compile)
 
 ;; smex
-(run-with-idle-timer 2 nil
-                     #'(lambda ()
-                         (when (ignore-errors (smex-initialize))
-                           (global-set-key (kbd "M-x") 'smex)
-                           (global-set-key (kbd "M-X") 'smex-major-mode-commands)
-                           ;; This is your old M-x.
-                           (global-set-key (kbd "C-c C-c M-x") 'execute-extended-command))))
+(add-hook 'after-init-hook
+          ;; (run-with-idle-timer 2 nil
+          #'(lambda ()
+              (when (ignore-errors (smex-initialize))
+                (global-set-key (kbd "M-x") 'smex)
+                (global-set-key (kbd "M-X") 'smex-major-mode-commands)
+                ;; This is your old M-x.
+                (global-set-key (kbd "C-c C-c M-x") 'execute-extended-command))))
 
 ;; symon
 ;; (add-hook 'after-init-hook
@@ -141,10 +142,10 @@
 ;; (autoload 'vlf "vlf" "View a Large File in Emacs." t)
 
 ;; window-numbering
-;; (add-hook 'after-init-hook
-;;           '(lambda ()
-;;              (ignore-errors (window-numbering-mode 1))))
-(run-with-idle-timer 3 nil #'window-numbering-mode 1)
+(add-hook 'after-init-hook
+          '(lambda ()
+             (ignore-errors (window-numbering-mode 1))))
+;; (run-with-idle-timer 3 nil #'window-numbering-mode 1)
 
 ;; win-switch
 ;; (autoload 'win-switch-dispatch "win-switch" nil t)
