@@ -17,10 +17,10 @@
 (setq ac-use-comphist nil)
 (setq ac-disable-faces nil)
 ;; (global-set-key (kbd "M-n") 'auto-complete)
-;; (add-hook 'after-init-hook
-;;           '(lambda ()
-;;              (ignore-errors (ac-config-default))))
-(run-with-idle-timer 3 nil #'ac-config-default)
+(add-hook 'after-init-hook
+          '(lambda ()
+             (ignore-errors (ac-config-default))))
+;; (run-with-idle-timer 3 nil #'ac-config-default)
 
 (eval-after-load "auto-complete"
   '(progn
